--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,16 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!-- Global site tag (gtag.js) - Google Analytics --> 
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-176113084-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-176113084-1');
+    </script>
     <title>Deepak Profile</title>
-  </head>
+   </head>
   <body style= "background-color: #0A081D">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
