revamped the animation and added new project

--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
       gtag('js', new Date());
       gtag('config', 'UA-176113084-1');
     </script>
-    <title>Deepak Profile</title>
+    <title>Deepak Kumar</title>
    </head>
   <body style= "background-color: #0A081D">
     <noscript>You need to enable JavaScript to run this app.</noscript>
